--- a/html/changelog.html
+++ b/html/changelog.html
@@ -31,6 +31,14 @@
 </table>
 
 		<div class="commit sansserif">
+      <h2 class="date">17 March 2018</h2>
+      <h3 class="author">Epicus updated:</h3>
+      <ul class="changes bgimages16">
+        <li class="rscadd">Новый мини-ивент, основанный на предыстории, который может запустить администратор.</li>
+        <li class="rscadd">Фракции, выбираемые при создании персонажа, теперь соответствуют предыстории. Ваши старые фракции должны автоматически сброситься на NanoTrasen.</li>
+        <li class="bugfix">Починил кодировку в ПДА.</li>
+      </ul>
+
       <h2 class="date">13 March 2018</h2>
       <h3 class="author">Rampo updated:</h3>
       <ul class="changes bgimages16">
