--- a/html/changelog.html
+++ b/html/changelog.html
@@ -30,7 +30,16 @@
 	</tr>
 </table>
 
-		<div class="commit sansserif">
+	<div class="commit sansserif">
+	  <h2 class="date">18 March 2018</h2>
+      <h3 class="author">BombanyTI updated:</h3>
+      <ul class="changes bgimages16">
+        <li class="rscadd">Огромное количество новых причесок.</li>
+        <li class="rscadd">Куча разной одежды.</li>
+		<li class="rscadd">Новые перчатки в лоадауте офицера.</li>
+		<li class="rscadd">Новые вещи в шкафах врача и бармена.</li>
+      </ul>
+	
       <h2 class="date">17 March 2018</h2>
       <h3 class="author">Epicus updated:</h3>
       <ul class="changes bgimages16">
