--- a/html/changelog.html
+++ b/html/changelog.html
@@ -32,6 +32,11 @@
 
 	<div class="commit sansserif">
 	  <h2 class="date">18 March 2018</h2>
+      <h3 class="author">MalinaBoy updated:</h3>
+      <ul class="changes bgimages16">
+        <li class="tweak">Атмосферный отсек перемещен на основной уровень станции.</li>
+        <li class="tweak">Первая стадия расширений техтоннелей под станцией.</li>
+      </ul>
       <h3 class="author">BombanyTI updated:</h3>
       <ul class="changes bgimages16">
         <li class="rscadd">Огромное количество новых причесок.</li>
