--- a/html/changelog.html
+++ b/html/changelog.html
@@ -31,6 +31,80 @@
 </table>
 
 	<div class="commit sansserif">
+
+    <h2 class="date">19 March 2018</h2>
+      <h3 class="author">Epicus updated:</h3>
+      <ul class="changes bgimages16">
+        <li class="tweak">Дефолтный FPS на клиенте поставил на 60 - будет работать на новых персонажах. Для старых выставьте руками во вкладке Global сетапа, иначе будут заметные рывки.</li>
+        <li class="bugfix">Починили баг из-за которого нельзя было зайти некоторыми персонажами с Блю. Вместо этого спавнились голые клоны.</li>
+        <li class="bugfix">Починил баг security glasses. Они показывали второй Security Status, вместо Security Note.</li>
+        <li class="bugfix">Убрал ранги с Торча из записи сотрудника.</li>
+      </ul>
+
+    <div class="merge">
+      <h3 class="mergeAuthor">Epicus merged Bay12</h3>
+
+      <h2 class="date">17 March 2018</h2>
+      <h3 class="author">Sbotkin updated:</h3>
+      <ul class="changes bgimages16">
+        <li class="tweak">Плотная одежда теперь защищает от жала Чейнджлинга.</li>
+        <li class="tweak">Биосьюты теперь плотные.</li>
+      </ul>
+			<h3 class="author">afterthought updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="bugfix">Шприцемет Одиссея теперь может синтезировать реагенты.</li>
+				<li class="bugfix">Починили выскальзывание из меха во время ивента нарушения гравитации.</li>
+			</ul>
+			<h3 class="author">mustafakalash updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="rscadd">Теперь вы можете написать что-то у человека на лбу с помощью ручки, мелка или помады (используйте намерение Help!). Смыть надписи можно в душе или в раковине, если голова отделена от тела.</li>
+				<li class="bugfix">Больше нельзя применять помаду к тому, у чего нет губ.</li>
+			</ul>
+			<h3 class="author">sabiram updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="rscadd">Король Козлов теперь может войти во вторую стадию в драке.</li>
+			</ul>
+
+			<h2 class="date">13 March 2018</h2>
+			<h3 class="author">chinsky & sabiram updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="rscadd">Пояса и полотенца теперь можно носить и без одежды.</li>
+			</ul>
+			<h3 class="author">mkalash updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="rscadd">Добавлены новые безопасные энергопистолеты, которые требуют регистрации пользователя и блокируются в стан-режиме без дополнительной авторизации.</li>
+				<li class="rscadd">В стан-револьверы добавлен шок-режим с подобной механикой.</li>
+			</ul>
+
+      <h2 class="date">12 March 2018</h2>
+			<h3 class="author">chaoko99 updated:</h3>
+      <ul class="changes bgimages16">
+				<li class="rscadd">Кремация теперь занимает время. Процесс кремации живого человека теперь слишком пугающий.</li>
+				<li class="rscadd">Теперь можно вырваться из крематория, если вы успеете. С таким же успехом можно успеть вытащить кого-то другого оттуда.</li>
+				<li class="bugfix">Новый спрайт крематория для активного состояния.</li>
+				<li class="imageadd">Небольшие изменения спрайта полки крематория и холодильника из морга.</li>
+			</ul>
+
+      <h3 class="author">chaoko99 updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="rscadd">Оверлей научных очков теперь показывает уровни изучения, а также состав предметов. Также показывает содержимое различных контейнеров для реагентов (стаканы, бургеры, пакеты для крови).</li>
+			</ul>
+
+      <h3 class="author">sabiram updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="rscadd">Различные животные, наиболее заметные враги человека, теперь могут сбежать из сетки.</li>
+			</ul>
+
+      <h3>Other changes:</h3>
+      <ul class="changes bgimages16">
+        <li class="rscadd">При полете шаттла, теперь вы можете улететь по инерции в другую сторону.</li>
+        <li class="tweak">Небольшие изменения повреждений мозга.</li>
+        <li class="bugfix">Пофиксили разные ошибки рантайма.</li>
+        <li class="bugfix">Починили баг, связанный с поломкой камеры.</li>
+        <li class="bugfix">Починили баг, связанный с поломкой камеры.</li>
+      </ul>
+    </div>
+
 	  <h2 class="date">18 March 2018</h2>
       <h3 class="author">MalinaBoy updated:</h3>
       <ul class="changes bgimages16">
@@ -44,7 +118,7 @@
 		<li class="rscadd">Новые перчатки в лоадауте офицера.</li>
 		<li class="rscadd">Новые вещи в шкафах врача и бармена.</li>
       </ul>
-	
+
       <h2 class="date">17 March 2018</h2>
       <h3 class="author">Epicus updated:</h3>
       <ul class="changes bgimages16">
