--- a/html/changelog.html
+++ b/html/changelog.html
@@ -31,6 +31,15 @@
 </table>
 
 	<div class="commit sansserif">
+    <h2 class="date">21 March 2018</h2>
+      <h3 class="author">Epicus updated:</h3>
+      <ul class="changes bgimages16">
+        <li class="bugfix">Из холстера теперь можно достать оружие кликом.</li>
+        <li class="bugfix">Клик рукой по одежде теперь работает только с тем аксессуаром, который был одет последним (если одеть холстер после разгрузки, то разгрузку не открыть!)</li>
+        <li class="bugfix">Клик любым предметом по одежде сам найдет с чем взаимодействовать, независимо от последовательности надевания.</li>
+        <li class="bugfix">Починил кодировки в PDA Notes</li>
+        <li class="bugfix">Починил кодировки в различных консольных записях</li>
+      </ul>
 
     <h2 class="date">19 March 2018</h2>
       <h3 class="author">Epicus updated:</h3>
