--- a/html/changelog.html
+++ b/html/changelog.html
@@ -31,6 +31,24 @@
 </table>
 
 	<div class="commit sansserif">
+    <h2 class="date">23 March 2018</h2>
+      <h3 class="author">Epicus updated:</h3>
+      <ul class="changes bgimages16">
+        <li class="tweak">Выпилил <s>ходьбу</s> бег боком.</li>
+        <li class="tweak">Выпилил возможность гостаться, будучи живым, ибо нефиг выходить из тела в камере со сроком 10 минут или поранив ногу. Играйте до конца. В исключительных случаях пишите в АХ.</li>
+      </ul>
+
+    <h2 class="date">22 March 2018</h2>
+      <h3 class="author">Plin updated:</h3>
+      <ul class="changes bgimages16">
+        <li class="bugfix">Починил прозрачные халаты ученых.</li>
+      </ul>
+
+      <h3 class="author">BombanyTI and NyanCommisar updated:</h3>
+      <ul class="changes bgimages16">
+        <li class="imageadd">Добавили кучу новых спрайтов, поменяли какие-то старые.</li>
+      </ul>
+
     <h2 class="date">21 March 2018</h2>
       <h3 class="author">Epicus updated:</h3>
       <ul class="changes bgimages16">
