Much more interesting lower level of the station Also minor changes of main level

--- a/html/changelog.html
+++ b/html/changelog.html
@@ -29,7 +29,24 @@
 			</td>
 	</tr>
 </table>
-
+	<div class="commit sansserif">
+    <h2 class="date">24 March 2018</h2>
+      <h3 class="author">MalinaBoy updated:</h3>
+      <ul class="changes bgimages16">
+		<li class="rscadd">Добавил гетто</li>
+		<li class="rscadd">Добавил обычные лестницы, чтобы по ним можно было таскать предметы.</li>
+		<li class="rscadd">Дополнения к основной карте, всякие таблички</li>
+		<li class="imageadd">Изменил спрайты шлюзов РнД, астероида, медбея</li>
+		<li class="bugfix">Куча различных фиксов по карте, начиная с консоли на мостике и заканчивая трубами в арсенале.</li>
+		<li class="bugfix">Добавил дополнительные зоны на основном уровне, чтобы энергия работала нормально</li>
+      </ul>
+	  
+	  <h3 class="author">BombanyTI updated:</h3>
+      <ul class="changes bgimages16">
+        <li class="rscadd">Добавил донат-панель.</li>
+		<li class="tweak">Теперь можно выливать жидкость из стакана с помощью намерения Harm.</li>
+      </ul>
+	
 	<div class="commit sansserif">
     <h2 class="date">23 March 2018</h2>
       <h3 class="author">Epicus updated:</h3>
