[ci skip] Update changelogs

--- a/html/changelog.html
+++ b/html/changelog.html
@@ -56,6 +56,27 @@
 		
 		-->
 		<div class="commit sansserif">
+			<h2 class="date">25 March 2018</h2>
+			<h3 class="author">DoctorOctopus updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="maptweak">Revamped ODST Locker Room</li>
+				<li class="rscadd">Added ODST Vendors</li>
+				<li class="rscadd">Added SecTech vendors to the UNSC Frigate's Brig</li>
+				<li class="rscadd">Added more loadout options when creating a character.</li>
+				<li class="tweak">Changed auto-CT vote to call at two hours instead of three.</li>
+				<li class="experiment">Removed secret from the gamemode vote.</li>
+				<li class="rscadd">Replaces the NT Vest in Naval Security Officers lockers with a NSO Vest.</li>
+			</ul>
+			<h3 class="author">bloxgate updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="rscadd">Enhanced liver for Spartans. Handles radiation and some toxins better.</li>
+				<li class="rscadd">Enhanced eyes for Spartans. Better protection from some blinding effects.</li>
+				<li class="tweak">Spartan's hearts can take more damage than normal humans.</li>
+				<li class="tweak">Spartans have a greater temperature tolerance.</li>
+				<li class="experiment">Spartans are more insulated than regular humans.</li>
+				<li class="bugfix">Spartans now have their player ages restricted to a lore-friendly range.</li>
+			</ul>
+
 			<h2 class="date">24 March 2018</h2>
 			<h3 class="author">DoctorOctopus updated:</h3>
 			<ul class="changes bgimages16">
