[ci skip] Changelog update
We really need to get a bot to do this automagically

--- a/html/changelog.html
+++ b/html/changelog.html
@@ -56,6 +56,37 @@
 		
 		-->
 		<div class="commit sansserif">
+			<h2 class="date">28 March 2018</h2>
+			<h3 class="author">DoctorOctopus updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="maptweak">Added firelocks to the USNC Frigate. Tell me if a firelock borked.</li>
+				<li class="maptweak">Added air alarms to the USNC Frigate. Tell me if I missed a room.</li>
+				<li class="maptweak">Created a Casino in the slums for all your gambling needs.</li>
+				<li class="maptweak">Created a Crime Scene in the slums because its a scary place.</li>
+				<li class="maptweak">Completed the Science biohazard lockdown system.</li>
+				<li class="maptweak">Made the MAC Cannon more secure, remodeled MAC Checkpoint.</li>
+				<li class="maptweak">Remodeled the Hospital Chemistry Lab.</li>
+				<li class="rscadd">Added another Mongoose to City Hall.</li>
+				<li class="maptweak">Tiny remodel to the Slums Armory - Made it so you can put things in the display windows.</li>
+				<li class="rscadd">Added some cleaning supplies in the hospital.</li>
+				<li class="maptweak">Added a button inside the Police Armory so people stop locking themselves in.</li>
+				<li class="rscadd">Each UNSC role has been given a rank which will equip automatically (thanks to xo's god coding) as soon as they spawn.</li>
+				<li class="maptweak">Small remodel of the UNSC Bridge, added lockdown system and fax machine, added new items to CO's Office, revamped gun room.</li>
+				<li class="maptweak">Made it so Frigate Power lasts way longer and doesn't die out in like ten minutes.</li>
+				<li class="maptweak">Renovated all deck two gun rooms.</li>
+				<li class="maptweak">Added a medvend, box of body bags, defib, and a morgue to the UNSC Medbay.</li>
+				<li class="experiment">Added Protocol 098831A-1 Room</li>
+				<li class="rscadd">Ported Bay's Nuclear Authentication System and Folders</li>
+				<li class="tweak">All helmets and vests now say UEG, United Earth Government, or UNSC and no longer say Sol Central, SOL, SOL CENTRAL GOVERNMENT.</li>
+				<li class="rscadd">Based on a lore request Marine Commanding Officer has been renamed to Marine Company Officer</li>
+				<li class="rscadd">Based on a lore request Marine Executive Officer has been renamed to Marine Gunnery Sergeant</li>
+				<li class="rscadd">Based on a lore request Naval Security Officer and Masters-At-Arms have switched places, NSO is now the Head, MAA is now the Officer</li>
+			</ul>
+			<h3 class="author">Terror4000rus updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="maptweak">Insurrection Base's engineering section was upgraded. Explosion of generators will not cause decompression and power failure.</li>
+			</ul>
+
 			<h2 class="date">25 March 2018</h2>
 			<h3 class="author">DoctorOctopus updated:</h3>
 			<ul class="changes bgimages16">
