--- a/html/changelog.html
+++ b/html/changelog.html
@@ -30,24 +30,48 @@
 	</tr>
 </table>
 	<div class="commit sansserif">
+    <h2 class="date">6 April 2018</h2>
+      <h3 class="author">Epicus updated:</h3>
+      <ul class="changes bgimages16">
+        <li class="rscadd">Вернули огромное количество новых режимов с бея и различных комбинаций старых режимов.</li>
+        <li class="tweak">Голосование за режим отключено. Теперь он всегда Secret, в который включены все режимы с различными вероятностями.</li>
+        <li class="tweak">Убрал подсказку о возможных режимах после объявления Secret.</li>
+        <li class="bugfix">Починил Force Secret. Да, теперь режим раунда - сюрприз даже для опытных игроков.</li>
+      </ul>
+
+    <h2 class="date">3 April 2018</h2>
+      <h3 class="author">Epicus updated:</h3>
+      <ul class="changes bgimages16">
+        <li class="rscadd">Новая система отсеивания мультиаккаунтов вместо паникбункера. Пока в тестовом режиме.</li>
+      </ul>
+
+      <h3 class="author">Dnivji and Guap6512 updated:</h3>
+      <ul class="changes bgimages16">
+        <li class="bugfix">Вернули ghost в криослиппер. Из-за бага бьонда в меню появляется только после перезапуска клиента (можно также использовать через консоль). Починим позже.</li>
+      </ul>
+
+      <h3 class="author">Rampo updated:</h3>
+      <ul class="changes bgimages16">
+        <li class="tweak">Убраны скафандры из синих шкафов. Теперь они появляются в них с небольшим шансом.</li>
+      </ul>
+
     <h2 class="date">24 March 2018</h2>
       <h3 class="author">MalinaBoy updated:</h3>
       <ul class="changes bgimages16">
-		<li class="rscadd">Добавил гетто</li>
-		<li class="rscadd">Добавил обычные лестницы, чтобы по ним можно было таскать предметы.</li>
-		<li class="rscadd">Дополнения к основной карте, всякие таблички</li>
-		<li class="imageadd">Изменил спрайты шлюзов РнД, астероида, медбея</li>
-		<li class="bugfix">Куча различных фиксов по карте, начиная с консоли на мостике и заканчивая трубами в арсенале.</li>
-		<li class="bugfix">Добавил дополнительные зоны на основном уровне, чтобы энергия работала нормально</li>
+		    <li class="rscadd">Добавил гетто</li>
+		    <li class="rscadd">Добавил обычные лестницы, чтобы по ним можно было таскать предметы.</li>
+		    <li class="rscadd">Дополнения к основной карте, всякие таблички</li>
+		    <li class="imageadd">Изменил спрайты шлюзов РнД, астероида, медбея</li>
+		    <li class="bugfix">Куча различных фиксов по карте, начиная с консоли на мостике и заканчивая трубами в арсенале.</li>
+		    <li class="bugfix">Добавил дополнительные зоны на основном уровне, чтобы энергия работала нормально</li>
       </ul>
 	  
-	  <h3 class="author">BombanyTI updated:</h3>
+	    <h3 class="author">BombanyTI updated:</h3>
       <ul class="changes bgimages16">
         <li class="rscadd">Добавил донат-панель.</li>
-		<li class="tweak">Теперь можно выливать жидкость из стакана с помощью намерения Harm.</li>
+		    <li class="tweak">Теперь можно выливать жидкость из стакана с помощью намерения Harm.</li>
       </ul>
 	
-	<div class="commit sansserif">
     <h2 class="date">23 March 2018</h2>
       <h3 class="author">Epicus updated:</h3>
       <ul class="changes bgimages16">
