--- a/html/changelog.html
+++ b/html/changelog.html
@@ -30,6 +30,18 @@
 	</tr>
 </table>
 	<div class="commit sansserif">
+    <h2 class="date">8 April 2018</h2>
+      <h3 class="author">Plin updated:</h3>
+      <ul class="changes bgimages16">
+        <li class="rscadd">Ввел ротацию карт. Пока находится в тестовом режиме.</li>
+        <li class="bugfix">Фикс невидимых аирлоков в медотсеке и РнД.</li>
+      </ul>
+      <h3 class="author">Rampo updated:</h3>
+      <ul class="changes bgimages16">
+        <li class="rscadd">Добавил новую карту станции, переделанную тюремку. Пока находится в тестовом режиме.</li>
+        <li class="tweak">Первая стадия фиксов ангарности: изменил восточный медбей, коридор инженерки, восточный бриг, ядро ИИ.</li>
+      </ul>
+
     <h2 class="date">6 April 2018</h2>
       <h3 class="author">Epicus updated:</h3>
       <ul class="changes bgimages16">
