--- a/html/changelog.html
+++ b/html/changelog.html
@@ -30,6 +30,14 @@
 	</tr>
 </table>
 	<div class="commit sansserif">
+    <h2 class="date">9 April 2018</h2>
+      <h3 class="author">Plin updated:</h3>
+      <ul class="changes bgimages16">
+        <li class="bugfix">Фикс бага отлетающих от подов полов.</li>
+        <li class="bugfix">Фикс бага спавна антагонистов на станции.</li>
+        <li class="tweak">Изменение параметров эммитеров, теперь поля сингулярности работают нормально.</li>
+      </ul>
+
     <h2 class="date">8 April 2018</h2>
       <h3 class="author">Plin updated:</h3>
       <ul class="changes bgimages16">
