--- a/html/changelog.html
+++ b/html/changelog.html
@@ -30,6 +30,18 @@
 	</tr>
 </table>
 	<div class="commit sansserif">
+    <h2 class="date">10 April 2018</h2>
+      <h3 class="author">MoonMen122 updated:</h3>
+      <ul class="changes bgimages16">
+        <li class="tweak">Добавил ботинки шахтерам.</li>
+        <li class="tweak">Перевод галюцинаций от лсд и других эмоутов на русский.</li>
+      </ul>
+      <h3 class="author">Rampo updated:</h3>
+      <ul class="changes bgimages16">
+        <li class="bugfix">Различной степени тяжести мапфиксы, они слишком мелкие и их слишком много, чтобы перечислять их.</li>
+        <li class="tweak">Убрал одну из позиций детектива. Хватит казуальщины, ищите напарников среди остального персонала.</li>
+      </ul>
+
     <h2 class="date">9 April 2018</h2>
       <h3 class="author">Plin updated:</h3>
       <ul class="changes bgimages16">
