--- a/html/changelog.html
+++ b/html/changelog.html
@@ -30,11 +30,23 @@
 	</tr>
 </table>
 	<div class="commit sansserif">
+    <h2 class="date">14 April 2018</h2>
+      <h3 class="author">Epicus updated:</h3>
+      <ul class="changes bgimages16">
+        <li class="rscadd">Окончательно отказались от ПаникБункера в пользу новой Epic Anti-Multiaccount System. Теперь можно зайти на сервер без администраторов. Новички, добро пожаловать!</li>
+        <li class="tweak">Требования для включения мага или нинзи повышены с 1 игрока до 7.</li>
+      </ul>
+      <h3 class="author">Rampo and Plin updated:</h3>
+      <ul class="changes bgimages16">
+        <li class="tweak">Отключили голосование за карту и вернули назад коробку. Баги нашли и пофиксили - оставим карту для ивентов.</li>
+      </ul>
+
+
     <h2 class="date">10 April 2018</h2>
       <h3 class="author">MoonMen122 updated:</h3>
       <ul class="changes bgimages16">
         <li class="tweak">Добавил ботинки шахтерам.</li>
-        <li class="tweak">Перевод галюцинаций от лсд и других эмоутов на русский.</li>
+        <li class="tweak">Перевод галлюцинаций от лсд и других эмоутов на русский.</li>
       </ul>
       <h3 class="author">Rampo updated:</h3>
       <ul class="changes bgimages16">
