--- a/html/changelog.html
+++ b/html/changelog.html
@@ -30,6 +30,14 @@
 	</tr>
 </table>
 	<div class="commit sansserif">
+    <h2 class="date">29 April 2018</h2>
+      <h3 class="author">Epicus updated:</h3>
+      <ul class="changes bgimages16">
+        <li class="rscadd">Расам добавлена система бодибилдов - теперь у всех могут быть разные пропорции. Пока все по стандарту, но расы с 4 руками не за горами.</li>
+        <li class="rscadd">У человеческих трапов теперь 3 боди-билда: один обычный, среднего телосложения и два тонких.</li>
+        <li class="bugfix">Стандартным расам все починил - теперь у них никакие хвосты и торсы не отваливаются. Все работает через систему боди-билдов. Для захода пока не включены - включим как убедимся, что боди-билды на человеках нормально работают.</li>
+      </ul>
+    
     <h2 class="date">14 April 2018</h2>
       <h3 class="author">Epicus updated:</h3>
       <ul class="changes bgimages16">
@@ -40,7 +48,6 @@
       <ul class="changes bgimages16">
         <li class="tweak">Отключили голосование за карту и вернули назад коробку. Баги нашли и пофиксили - оставим карту для ивентов.</li>
       </ul>
-
 
     <h2 class="date">10 April 2018</h2>
       <h3 class="author">MoonMen122 updated:</h3>
