Bug fixes, job/Paramedic renamed to job/paramedic
fixed #112
fixed #113 (не было сломано)
fixed #115
fixed #119

--- a/html/changelog.html
+++ b/html/changelog.html
@@ -30,6 +30,14 @@
 	</tr>
 </table>
 	<div class="commit sansserif">
+    <h2 class="date">02 May 2018</h2>
+      <h3 class="author">Sinful Puppet updated:</h3>
+      <ul class="changes bgimages16">
+        <li class="bugfix">Удален дубликат двери в техах.</li>
+        <li class="bugfix">Все врачи теперь могут брать медицинскую разгрузку в лоаудауте.</li>
+        <li class="bugfix">Сигареты теперь горят нормально.</li>
+      </ul>
+	 
     <h2 class="date">29 April 2018</h2>
       <h3 class="author">Epicus updated:</h3>
       <ul class="changes bgimages16">
