--- a/html/changelog.html
+++ b/html/changelog.html
@@ -30,6 +30,17 @@
 	</tr>
 </table>
 	<div class="commit sansserif">
+
+    <h2 class="date">03 May 2018</h2>
+      <h3 class="author">Sinful Puppet updated:</h3>
+      <ul class="changes bgimages16">
+        <li class="imageadd">Добавлено мыло охранников.</li>
+        <li class="rscadd">Добавлено освещение в часовне.</li>
+        <li class="rscadd">Добавлен laber и мыло в бриг.</li>
+        <li class="rscadd">Добавлена кнопка Stop All Sounds в OOC.</li>
+        <li class="rscadd">Удалена бесполезная стена под лазаретом брига.</li>
+      </ul>
+   
     <h2 class="date">02 May 2018</h2>
       <h3 class="author">Sinful Puppet updated:</h3>
       <ul class="changes bgimages16">
