--- a/html/changelog.html
+++ b/html/changelog.html
@@ -31,6 +31,19 @@
 </table>
 	<div class="commit sansserif">
 
+    <h2 class="date">10 May 2018</h2>
+      <h3 class="author">hekko4 updated:</h3>
+      <ul class="changes bgimages16">
+        <li class="bugfix">Починил всевозможные дырки у труб на Exodus'e.</li>
+        <li class="bugfix">Починил провода возле атмосферного СМЕСа.</li>
+        <li class="bugfix">Починил спавнпоинт инженеров.</li>
+        <li class="bugfix">Дополнил мусорожигательную печь камерой\скраббером\вентом.</li>
+        <li class="bugfix">Заменил настенные зарядники в медбее на обычные, для батареек. Так же рядом положил отвёртку, чтобы можно было вытащить из дефибриллятора батарейку и зарядить\заменить её. Плюс две дополнительные батарейки для быстрой замены.</li>
+        <li class="bugfix">Дал роботехнику в свой хирургический набор прижигатель и продвинутый набор для травм.</li>
+        <li class="bugfix">Провёл вентиляционную систему в атмосферный отсек.</li>
+        <li class="bugfix">Заменил исходное значение для закачки\отдачи в СМЕСах на своё максимально-возможное. [250 кВт]</li>
+      </ul>
+
     <h2 class="date">03 May 2018</h2>
       <h3 class="author">Sinful Puppet updated:</h3>
       <ul class="changes bgimages16">
