hemastat/retractor icons tweaked mech_fab icon/anim tweaked mech_fab ejects to right side Robotics   -2 stools   +2 chairs   -1 large beaker   +1 robot analyzer   conveyors/levers  operating theatre   +1 morgue   +1 sterile gloves   +1 roller bed   +1 injector box   +cautery   +anesthesic dispenser   +trauma pack Mechbay  +1 mechanic toolbox  -4 Mechchargers  -fueltank  +1 cyborg cryo added shutters to xenobiology and rd office added fire alarm in toxins moved fire alarm in xenobiology added rack to hold screewdriver adn wrench in toxins

--- a/html/changelog.html
+++ b/html/changelog.html
@@ -31,6 +31,20 @@
 </table>
 	<div class="commit sansserif">
 
+	    <h2 class="date">10 May 2018</h2>
+      <h3 class="author">LagannPM updated:</h3>
+      <ul class="changes bgimages16">
+        <li class="maptweak">Переделал роботехнику.</li>
+		<li class="maptweak">Переделал ангар мехов.</li>
+        <li class="rscadd">Добавил диспенсер анестетика в операционную роботеха(тестовая фича). Перетягивайте иконку диспенсера на пациента. Маска стягивается автоматически</li>
+        <li class="rscadd">Фабрикатор в роботехе, новая иконка с анимацией и выплёвывает предметы справа от него.</li>
+        <li class="maptweak">Добавил пожарную тревогу в токсины.</li>
+        <li class="maptweak">Подвинул пожарную тревогу в ксенобиологии.</li>
+        <li class="maptweak">Добавил отсутствующие пожарные шаттры в рд и ксенобиологии.</li>
+        <li class="tweak">Изменил иконки зажима и ретрактора.</li>
+        <li class="maptweak">Добавил подставку под отверту и гаечный ключ в токсинах.</li>
+      </ul>
+	  
     <h2 class="date">10 May 2018</h2>
       <h3 class="author">hekko4 updated:</h3>
       <ul class="changes bgimages16">
