--- a/html/changelog.html
+++ b/html/changelog.html
@@ -56,6 +56,35 @@
 		
 		-->
 		<div class="commit sansserif">
+			<h2 class="date">14 May 2018</h2>
+			<h3 class="author">Banditoz updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="rscadd">Added a new gamemode, fathless; a mix between cult and deity (also known by some as godcult.)</li>
+			</ul>
+			<h3 class="author">Cakey updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="maptweak">Moved alll checkpoints to be positioned in more key areas. B-deck and deck one checkpoints are now connected via ladder. All checkpoints now have the ability to cut-off certain sections of the hallways for flow control.</li>
+				<li class="maptweak">Brig officer now has a disposals bin.</li>
+				<li class="maptweak">Emergency armory has been altered to have 3 carbines and 3 e-guns as opposed to the 2:3 loadout to match the rest of the E-ARM.</li>
+				<li class="maptweak">Brig armory has been altered to have 4 e-guns as opposed to 3 to match the rest of the armory.</li>
+			</ul>
+			<h3 class="author">Casper3667 updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="rscadd">Vox now spawn with their air filter gas mask.</li>
+			</ul>
+			<h3 class="author">afterthought2 updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="tweak">Very damaged heads will be marked as "critical" rather than "irreparable" on scanners, and can be healed even past max_damage threshold.</li>
+			</ul>
+			<h3 class="author">chaoko99 updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="rscdel">Reverted a change that made it impossible to draw/fill plant reagents. You may now make your tomato grenades again.</li>
+			</ul>
+			<h3 class="author">tlc2013 updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="bugfix">Fixed certain Spellbound Servant equipment not having the proper icons, or - at worst - having no icons at all.</li>
+			</ul>
+
 			<h2 class="date">10 May 2018</h2>
 			<h3 class="author">chaoko99 updated:</h3>
 			<ul class="changes bgimages16">
@@ -725,47 +754,6 @@
 			<ul class="changes bgimages16">
 				<li class="rscadd">Added secure energy guns, which require registration to a user and are locked to stun without additional per-mode authorization. Secure small energy guns replace security's tasers.</li>
 				<li class="rscadd">NTsec now also get a shock mode for their revolvers, which is also locked behind command authorization.</li>
-			</ul>
-
-			<h2 class="date">12 March 2018</h2>
-			<h3 class="author">chaoko99 updated:</h3>
-			<ul class="changes bgimages16">
-				<li class="rscadd">Cremation now takes time. Doing so with a live subject inside will cause it to rattle around violently. You monster.</li>
-				<li class="rscadd">You can now resist out of a crematorium on a short timer. You may also eject someone from a crematorium from outside it on a similar timer.</li>
-				<li class="bugfix">Crematorium now uses a glowing sprite when active.</li>
-				<li class="imageadd">Changes the crematorium and morgue slab sprites to something cleaner.</li>
-			</ul>
-
-			<h2 class="date">11 March 2018</h2>
-			<h3 class="author">Devildabeast updated:</h3>
-			<ul class="changes bgimages16">
-				<li class="rscadd">Adds a Morpheus Cyberkinetics uniform to the loadout.</li>
-			</ul>
-
-			<h2 class="date">10 March 2018</h2>
-			<h3 class="author">Rebruiza updated:</h3>
-			<ul class="changes bgimages16">
-				<li class="soundadd">APC's now play a satisfying sound when they run out of power.</li>
-				<li class="soundadd">Maintenance now has ambience.</li>
-				<li class="soundadd">Fire alarms now have a new sound.</li>
-				<li class="soundadd">Airlocks and bolts now have a new sound.</li>
-				<li class="soundadd">Blast doors now have a new sound.</li>
-				<li class="soundadd">Suit storage units now have a new sound.</li>
-				<li class="soundadd">Lockers now have a new sound.</li>
-				<li class="soundadd">Touching metal walls now have a new sound.</li>
-				<li class="tweak">The sound of tube lights turning on is now louder.</li>
-			</ul>
-			<h3 class="author">Techhead0 updated:</h3>
-			<ul class="changes bgimages16">
-				<li class="rscadd">You can now temporarily reseal damaged spacesuits with duct tape. Either click on the suit itself, or target the chest and click on a mob wearing a spacesuit. But be warned, further damage will tear off the patch.</li>
-			</ul>
-			<h3 class="author">TheWelp updated:</h3>
-			<ul class="changes bgimages16">
-				<li class="rscadd">Adds a temporary effect object to make spells look prettier.</li>
-			</ul>
-			<h3 class="author">sabiram updated:</h3>
-			<ul class="changes bgimages16">
-				<li class="rscadd">The Sol Representative and the NT Liaison have been provided a fancier pen in their PDA for writing their important documents.</li>
 			</ul>
 		</div>
 
