Manual changelog update, May 14

--- a/html/changelog.html
+++ b/html/changelog.html
@@ -72,9 +72,18 @@
 			<ul class="changes bgimages16">
 				<li class="rscadd">Vox now spawn with their air filter gas mask.</li>
 			</ul>
+			<h3 class="author">Miraviel updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="bugfix">You can now use sign language even if you are muzzled.</li>
+			</ul>
 			<h3 class="author">afterthought2 updated:</h3>
 			<ul class="changes bgimages16">
 				<li class="tweak">Very damaged heads will be marked as "critical" rather than "irreparable" on scanners, and can be healed even past max_damage threshold.</li>
+				<li class="rscadd">Adds a deck management program, which gives some information on shuttle movements.</li>
+				<li class="rscadd">Adds flight plans, which can be filed via this program by those with shuttle flight access.</li>
+				<li class="rscadd">If the flight plan includes a roster, the members on the roster can be summoned via automatic comms announcements or batch-emailed.</li>
+				<li class="rscadd">Adds other reports that supply can file about shuttle missions after the mission has departed/returned.</li>
+				<li class="rscadd">Adds a stripped-down report viewer program, currently mostly useful for viewing emailed reports.</li>
 			</ul>
 			<h3 class="author">chaoko99 updated:</h3>
 			<ul class="changes bgimages16">
