--- a/html/changelog.html
+++ b/html/changelog.html
@@ -31,6 +31,23 @@
 </table>
 	<div class="commit sansserif">
 
+	<h2 class="date">12 May 2018</h2>
+      <h3 class="author">LagannPM updated:</h3>
+      <ul class="changes bgimages16">
+        <li class="maptweak">Переделал роботехнику.</li>
+		<li class="maptweak">Переделал ангар мехов.</li>
+        <li class="rscadd">Добавил диспенсер анестетика в операционную роботеха(тестовая фича). Перетягивайте иконку диспенсера на пациента. Маска стягивается автоматически</li>
+		<li class="bugfix">Пофиксил баг с невидимой маской у настенного насоса кислорода.</li>
+        <li class="rscadd">Фабрикатор в роботехе выплёвывает предметы справа от него.</li>
+        <li class="maptweak">Добавил пожарную тревогу в токсины.</li>
+        <li class="maptweak">Подвинул пожарную тревогу в ксенобиологии.</li>
+        <li class="maptweak">Добавил отсутствующие пожарные шаттры в рд и ксенобиологии.</li>
+        <li class="maptweak">Добавил подставку под отверту и гаечный ключ в токсинах.</li>
+		<li class="maptweak">Добавил 2 лампочки в рессепшн медбея.</li>
+		<li class="maptweak">Добавил шкавчик с пакетами крови в хранилище медбея.</li>
+		<li class="maptweak">Добавил остутсвующие пакеты крови в настенный шкавчик с О- группой крови.</li>
+      </ul>
+	  
     <h2 class="date">10 May 2018</h2>
       <h3 class="author">hekko4 updated:</h3>
       <ul class="changes bgimages16">
