--- a/html/changelog.html
+++ b/html/changelog.html
@@ -31,21 +31,82 @@
 </table>
 	<div class="commit sansserif">
 
-	<h2 class="date">12 May 2018</h2>
+    <div class="merge">
+        <h3 class="mergeAuthor">Глобальное весеннее обновление</h3>
+
+        <h3 class="author">Новый атмосферный отсек от Dnivji:</h3>
+        <ul class="changes bgimages16">
+          <li class="maptweak">Двухуровневый, более компактный и простой в освоении атмос.</li>
+          <li class="rscadd">На карту добавлен новый газ - водород. Пока только в атмосферном отсеке.</li>
+        </ul>
+
+        <h3 class="author">Новая робототехника от LagannPM:</h3>
+        <ul class="changes bgimages16">
+          <li class="maptweak">В робототехнике теперь есть операционная, засчет уменьшения размеров ангара.</li>
+          <li class="rscadd">Новый настенный анестезионный аппарат, вместо старого баллона.</li>
+          <li class="rscadd">Теперь все операционные инструменты компактно сложены в специальный ящик.</li>
+        </ul>
+
+        <h3 class="author">Новый бар от LagannPM:</h3>
+        <ul class="changes bgimages16">
+          <li class="maptweak">Бар полностью переделан - теперь барная стойка расположена в другом месте и выглядит он совершенно иначе!</li>
+        </ul>
+
+        <h3 class="author">Epicus наконец включил расы в игру:</h3>
+        <ul class="changes bgimages16">
+          <li class="rscadd">Теперь для игры доступны три стандартные расы: Таяряне, Унати и Скреллы.</li>
+          <li class="tweak">На короткий тестовый период игра за расы ограничена внутриигровым вайтлистом - пинайте педалей, чтобы получить доступ на 1 раунд.</li>
+          <li class="tweak">Добавлены ограничения на профессии для рас, согласно wiki.ss13.ru.</li>
+        </ul>
+
+        <h3 class="author">Другие изменения:</h3>
+        <h3 class="author">LagannPM</h3>
+        <ul class="changes bgimages16">
+          <li class="rscadd">Починил роботов и вернул их в игру. Офицер Бипски вновь может оказаться у вас за спиной в самый неподходящий момент.</li>
+          <li class="bugfix">Починил муллботов и бесмертие всем типам роботов.</li>
+          <li class="bugfix">Вирус Грейтайда теперь выносит вообще все двери в бриге.</li>
+          <li class="bugfix">Убрал черный экран в конце игры.</li>
+        </ul>
+
+        <h3 class="author">hekko4</h3>
+        <ul class="changes bgimages16">
+          <li class="rscadd">Распилил нижний уровень на кучу различных зон - теперь дыра в одной части гетто не будет вызывать тревогу по всей карте.</li>
+          <li class="bugfix">Убрал нерабочие огромные стационарные срабберы из токсинов и брига.</li>
+          <li class="bugfix">Огромное количество небольших фиксов различных косяков карты.</li>
+        </ul>
+
+        <h3 class="author">Epicus7</h3>
+        <ul class="changes bgimages16">
+          <li class="bugfix">Починил отображение различной одежды, которая одевается на слот груди (аксессуары и сигареты тоже скоро починю).</li>
+          <li class="bugfix">Выпилил дисбалансный скилл у ящеров.</li>
+        </ul>
+
+        <h3 class="author">FighterX2500</h3>
+        <ul class="changes bgimages16">
+          <li class="tweak">Фортепьяно теперь может проигрывать музыку, состоящую из бОльшего количества строк (300 вместо 50).</li>
+        </ul>
+
+        <h3 class="author">Plin</h3>
+        <ul class="changes bgimages16">
+          <li class="bugfix">Теперь шаттлы можно зафорсить авторизацией в случаях, когда раньше писало "The console buzzes. It does not appear to be accepting any commands.".</li>
+        </ul>
+    </div>
+
+    <h2 class="date">12 May 2018</h2>
       <h3 class="author">LagannPM updated:</h3>
       <ul class="changes bgimages16">
         <li class="maptweak">Переделал роботехнику.</li>
-		<li class="maptweak">Переделал ангар мехов.</li>
+		    <li class="maptweak">Переделал ангар мехов.</li>
         <li class="rscadd">Добавил диспенсер анестетика в операционную роботеха(тестовая фича). Перетягивайте иконку диспенсера на пациента. Маска стягивается автоматически</li>
-		<li class="bugfix">Пофиксил баг с невидимой маской у настенного насоса кислорода.</li>
+		    <li class="bugfix">Пофиксил баг с невидимой маской у настенного насоса кислорода.</li>
         <li class="rscadd">Фабрикатор в роботехе выплёвывает предметы справа от него.</li>
         <li class="maptweak">Добавил пожарную тревогу в токсины.</li>
         <li class="maptweak">Подвинул пожарную тревогу в ксенобиологии.</li>
         <li class="maptweak">Добавил отсутствующие пожарные шаттры в рд и ксенобиологии.</li>
         <li class="maptweak">Добавил подставку под отверту и гаечный ключ в токсинах.</li>
-		<li class="maptweak">Добавил 2 лампочки в рессепшн медбея.</li>
-		<li class="maptweak">Добавил шкавчик с пакетами крови в хранилище медбея.</li>
-		<li class="maptweak">Добавил остутсвующие пакеты крови в настенный шкавчик с О- группой крови.</li>
+		    <li class="maptweak">Добавил 2 лампочки в рессепшн медбея.</li>
+		    <li class="maptweak">Добавил шкавчик с пакетами крови в хранилище медбея.</li>
+		    <li class="maptweak">Добавил остутсвующие пакеты крови в настенный шкавчик с О- группой крови.</li>
       </ul>
 	  
     <h2 class="date">10 May 2018</h2>
