[ci skip] Update Changelogs

--- a/html/changelog.html
+++ b/html/changelog.html
@@ -56,6 +56,50 @@
 		
 		-->
 		<div class="commit sansserif">
+			<h2 class="date">28 May 2018</h2>
+			<h3 class="author">Cael_Aislinn updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="bugfix">Resolved various bugs with lighting and other things on Stranded.</li>
+			</ul>
+			<h3 class="author">DoctorOctopus updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="rscadd">Makes R&D more halo-lore friendly.</li>
+				<li class="rscadd">Removes the items that got it mapped out in the first place, no more laser guns.</li>
+				<li class="maptweak">Mine cordoned off for safety reasons.</li>
+				<li class="maptweak">Geminus City has had its nuclear weapons removed after concerns brought up by ONI.</li>
+				<li class="maptweak">Slums given fronts in which illegal business can be conducted as though it is legal.</li>
+				<li class="maptweak">Dead ends in slums increased.</li>
+				<li class="maptweak">Project Theta instituted with Lore Master The Pillow's Approval.</li>
+				<li class="experiment">Research and Development has been restored to GC's Science Bay.</li>
+				<li class="maptweak">GCPD Armory remodeled, made more secure, organized.</li>
+				<li class="maptweak">GCPD Storage Room emptied and refilled with various storage-related items.</li>
+				<li class="maptweak">Redesigns the Detective's Office.</li>
+				<li class="maptweak">Redesigns the Forensic Scientist's Lab, adds a morgue, full lab, ect.</li>
+				<li class="rscadd">Adds a new GCPD Officer Alt-Title, GCPD Forensic Scientist.</li>
+				<li class="bugfix">Fixed a few bugs for Desolane.</li>
+			</ul>
+			<h3 class="author">Nalar updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="bugfix">Announcements generated via admins or the communications console can now be heard by characters in-game.</li>
+				<li class="bugfix">New arrivals for UNSC and the colony are now announced.</li>
+				<li class="rscadd">The more commonly used radio channels now have different colours!</li>
+				<li class="rscadd">New arrivals for ODST now announced.</li>
+				<li class="tweak">The CO now has access to TACCOM for coordination between the marines and ODST.</li>
+				<li class="tweak">The CO, Bridge Officer, ONI Bridge Officer and XO now all have access to FLEETCOM to allow for greater coordination.</li>
+				<li class="tweak">The overmap now shows the UNSC Heavens Above rather than UNSC Frigate.</li>
+				<li class="tweak">The arrivals message now refers to the Heavens Above by name, instead of UNSC Frigate.</li>
+				<li class="bugfix">The covenant battlenet is now coloured, and is the same colour as TACCOM.</li>
+				<li class="bugfix">Communications consoles and faxes now have the correct option to message United Nations Space Command/UNSC HIGHCOM (admins)</li>
+				<li class="bugfix">Fax machines in the COs quarters and command areas are now correctly named.</li>
+				<li class="bugfix">Announced arrivals now correctly state which place new arrivals arrive at.</li>
+				<li class="rscadd">Adds a private ODST channel called TACCOM so ODSTs and ONI can coordinate better.</li>
+				<li class="bugfix">Bullets now do significantly less damage to walls.</li>
+			</ul>
+			<h3 class="author">Nalar & XO-11 updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="bugfix">Fixes department comms keys. Rejoice! No longer will :h be the one true saviour of private communication!</li>
+			</ul>
+
 			<h2 class="date">28 March 2018</h2>
 			<h3 class="author">DoctorOctopus updated:</h3>
 			<ul class="changes bgimages16">
