--- a/html/changelog.html
+++ b/html/changelog.html
@@ -30,10 +30,26 @@
 	</tr>
 </table>
 	<div class="commit sansserif">
+    <h2 class="date">4 June 2018</h2>
+      <h3 class="author">Epicus and Plin updated:</h3>
+      <ul class="changes bgimages16">
+        <li class="tweak">Серьезно улучшили Epic Anti-Multiaccount System, так что теперь почти не должно быть ложных срабатываний.</li>
+        <li class="rscadd">Педали получили больше возможностей для того, чтобы найти вас ИРЛ и рассказать вам про правила.</li>
+      </ul>
 
+      <h3 class="author">hekko4 updated:</h3>
+      <ul class="changes bgimages16">
+        <li class="bugfix">Починил кривой шлюз на входе в аутпост шахтеров.</li>
+      </ul>
+
+      <h3 class="author">LagannPM updated:</h3>
+      <ul class="changes bgimages16">
+        <li class="maptweak">Переделал базу торговца.</li>
+        <li class="bugfix">Починил шаттл торгоца.</li>
+      </ul>
+
+    <h2 class="date">Глобальное весеннее обновление</h2>
     <div class="merge">
-        <h3 class="mergeAuthor">Глобальное весеннее обновление</h3>
-
         <h3 class="author">Новый атмосферный отсек от Dnivji:</h3>
         <ul class="changes bgimages16">
           <li class="maptweak">Двухуровневый, более компактный и простой в освоении атмос.</li>
