[ci skip] Update Changelogs

--- a/html/changelog.html
+++ b/html/changelog.html
@@ -56,6 +56,41 @@
 		
 		-->
 		<div class="commit sansserif">
+			<h2 class="date">04 June 2018</h2>
+			<h3 class="author">BDpuffy420 updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="rscadd">More Ship names to the NPC list</li>
+				<li class="rscadd">Expanded the overmap to 60 like in First Contact</li>
+				<li class="rscadd">Ported many overmap places to Colony</li>
+				<li class="tweak">Changed the mining colony colonist role to Outer Colonist</li>
+				<li class="rscadd">Placed two more overmap ship icon down</li>
+			</ul>
+			<h3 class="author">Desolane900 updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="rscadd">added the MA3 assault rifle</li>
+				<li class="rscadd">changed canister health to double of what it was</li>
+				<li class="rscadd">changed a few weapon and magazine descriptions</li>
+				<li class="rscadd">added 5.56mm and 9mm to ammo fabricators</li>
+				<li class="rscadd">returned the Battle Rifle to it's glory days</li>
+				<li class="rscadd">increased the fire rate of the LMG</li>
+			</ul>
+			<h3 class="author">DoctorOctopus updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="experiment">To the new players reading this, our development is extremely active just really bad at doing changelogs. Check our github for real-time updates.</li>
+				<li class="rscadd">Adds a hat, and eyeglass section to the loadout.</li>
+				<li class="rscadd">Codes, Sprites, and Implements an ONI Badge, badge will be given to all ONI Staff.</li>
+				<li class="rscadd">(most of) Nanotrasen has been phased out, replaced with http://halo.wikia.com/wiki/Misriah_Armory , an armaments manufacturer.</li>
+				<li class="tweak">Changes all sprites to be MA Themed, renames all NT Objects</li>
+			</ul>
+			<h3 class="author">XO-11 updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="tweak">Brings nanolaminate-strength in line with material's lore-superiority over normal steel/reinforced plas-steel.</li>
+			</ul>
+			<h3 class="author">bloxgate updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="maptweak">Adds lots of firelocks to the UNSC Corvette</li>
+			</ul>
+
 			<h2 class="date">28 May 2018</h2>
 			<h3 class="author">Cael_Aislinn updated:</h3>
 			<ul class="changes bgimages16">
